--- a/Desktop/23-2/VRAR System/firebase/public/index.html
+++ b/Desktop/23-2/VRAR System/firebase/public/index.html
@@ -75,7 +75,7 @@
         <img class="photoo" src="포토부스.png">
     </div>
     <div id="message">
-        <img src="코코.jpg" alt="어렵구먼">
+        <img src="gs://isegye-photobooth.appspot.com/Assets/sumikko.jpg" alt="어렵구먼">
         <button id="photoButton" onclick="redirectToLink('https://firebase.google.com/docs/hosting/')">사진 저장</button>
         <button id="photoButton" onclick="redirectToLink('https://firebase.google.com/docs/hosting/')">비디오 저장</button>
         <script>
